syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/seventeenthearth/sudal/gen/go/user/v1;userv1";

// UserService manages user profiles.
service UserService {
  // Registers a new user after Firebase authentication.
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  // Retrieves a user's profile.
  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfile);
  // Updates a user's profile information.
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

// --- Messages ---

message UserProfile {
  string user_id = 1; // UUID
  string display_name = 2;
  string avatar_url = 3;
  int32 candy_balance = 4;
  google.protobuf.Timestamp created_at = 5;
}

// RegisterUser
message RegisterUserRequest {
  string firebase_uid = 1;
  string display_name = 2;
  // e.g., "Google", "Apple", "Kakao"
  string auth_provider = 3;
}

message RegisterUserResponse {
  string user_id = 1; // The newly created user's UUID
  bool success = 2;
}

// GetUserProfile
message GetUserProfileRequest {
  string user_id = 1; // UUID
}
// Returns the UserProfile message.

// UpdateUserProfile
message UpdateUserProfileRequest {
  string user_id = 1; // UUID
  // optional: only update if the field is provided.
  optional string display_name = 2;
  optional string avatar_url = 3;
}

message UpdateUserProfileResponse {
  bool success = 1;
}
